--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2288, 314)\n",
-      "Exercise Transform Data(Tuple) Count: 2288\n"
+      "Raw Data Count(Exercises, Days): (2293, 315)\n",
+      "Exercise Transform Data(Tuple) Count: 2293\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 27)\n",
-      "('Assisted Dips[Machine]', 54)\n",
+      "('Assisted Dips[Machine]', 55)\n",
       "('Assisted Pull-Up[Machine]', 68)\n",
       "('Back Extension', 43)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
@@ -215,7 +215,7 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 52)\n",
+      "('Chest Fly[Pec Deck Machine]', 53)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
       "('Deadlift[Barbell]', 98)\n",
@@ -224,7 +224,7 @@
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Dips', 18)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 68)\n",
+      "('Flat Bench Press[Barbell]', 69)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
@@ -246,8 +246,8 @@
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
-      "('Incline Bench Press[Dumbbell]', 27)\n",
-      "('Incline Bench Press[Machine]', 36)\n",
+      "('Incline Bench Press[Dumbbell]', 28)\n",
+      "('Incline Bench Press[Machine]', 37)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
@@ -345,104 +345,104 @@
       "('Seated Row[Machine]', 80)\n",
       "('Side Lateral Raise[Dumbbell]', 76)\n",
       "('Long Pull Row[Cable]', 73)\n",
-      "('Flat Bench Press[Barbell]', 68)\n",
+      "('Flat Bench Press[Barbell]', 69)\n",
       "('Assisted Pull-Up[Machine]', 68)\n",
       "('Power Leg Press[Machine]', 66)\n",
       "('Leg Extension[Machine]', 63)\n",
-      "('Assisted Dips[Machine]', 54)\n",
+      "('Assisted Dips[Machine]', 55)\n",
       "('Straight Arm Pulldown[Cable]', 54)\n",
-      "('Chest Fly[Pec Deck Machine]', 52)\n",
+      "('Chest Fly[Pec Deck Machine]', 53)\n",
       "('Running', 47)\n",
       "('Back Extension', 43)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Incline Bench Press[Machine]', 36)\n",
+      "('Incline Bench Press[Machine]', 37)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 29)\n",
+      "('Incline Bench Press[Dumbbell]', 28)\n",
       "('Arnold Press[Dumbbell]', 27)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
-      "('Incline Bench Press[Dumbbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Dips', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Bent Over Row[Barbell]', 17)\n",
       "('Military Press[Smith Machine]', 17)\n",
       "('Upright Row[EZ Curl Bar]', 17)\n",
+      "('Bent Over Row[Barbell]', 17)\n",
       "('Split Squat[Smith Machine]', 16)\n",
       "('Hip Bridge', 15)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Push-Up', 11)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Push-Up', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Body-Weight Squat', 5)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Hip Thrust', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
-      "('Dead Bug', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
       "('Walking', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Dead Bug', 2)\n",
+      "('Trx Row', 2)\n",
       "('Vipr Overhead Squat', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Split Squat', 1)\n",
       "('Trx Lunge', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n"
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Hip Abduction', 1)\n"
      ]
     }
    ],
