--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -365,84 +365,84 @@
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
       "('Dips', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Military Press[Smith Machine]', 17)\n",
       "('Upright Row[EZ Curl Bar]', 17)\n",
       "('Bent Over Row[Barbell]', 17)\n",
       "('Split Squat[Smith Machine]', 16)\n",
       "('Hip Bridge', 15)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Pull-Up', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('Hip Thrust', 5)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Squat[Dumbbell]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Body-Weight Squat', 5)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Reverse Crunch', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Reverse Crunch', 4)\n",
       "('Hanging Leg Raise', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Walking', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Dead Bug', 2)\n",
+      "('Walking', 2)\n",
       "('Trx Row', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Vipr Overhead Squat', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
       "('Lunge[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
       "('Cross Lunges', 1)\n",
-      "('Hip Abduction', 1)\n"
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n"
      ]
     }
    ],
